<resources>
    <string name="app_name">Monumentum</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="menu_all">All</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_visited">Visited</string>
    <string name="menu_about">Monumentum</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="rate_this_monument">How would you rate this monument?</string>
    <string name="comment">Type comment...</string>
    <string name="title_activity_new_monument">NewMonumentActivity</string>
    <string name="write_name_here">Write name here...</string>
    <string name="write_description_here">Write description here...</string>
    <string name="take_photo">Take photo</string>
    <string name="save">Save</string>
    <string name="signout">Sign out</string>
    <string name="settings">Settings</string>
    <string name="monumentum">Monumentum</string>
    <string name="authors">by code10</string>
    <string name="browse_monuments">Browse</string>
    <string name="add_new">Add new</string>
    <string name="view_map">View map</string>
    <string name="title_activity_maps">Map</string>
    <string name="keep_login">Keep me logged in</string>
    <string name="keep_login_description">If on, you will not be logged out upon exiting</string>
    <string name="distance_units">Distance units</string>
    <string name="search">Search</string>
    <string name="network_error">Error! Check your internet connection.</string>
    <string name="signup_success">Successfully signed up!</string>
    <string name="fields_empty">All fields must be filled in!</string>
    <string name="error">Error occurred!</string>
    <string name="welcome_text">Welcome!</string>
    <string name="monument_image_mandatory">You have to add a picture of the monument first!</string>
    <string name="fields_mandatory">All fields must be filled in!</string>
    <string name="success">Success!</string>
    <string name="email_taken">Email taken!</string>
    <string name="signin_error">Wrong email or password!</string>
</resources>
