<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_name_here"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLength="60" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_description_here"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="300" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/takePhoto"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/take_photo" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/imageCaptured"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="12dp" />

    </LinearLayout>

</RelativeLayout>